# storage/api-docs/api-docs.json
@@ -439,6 +439,48 @@
                 ]
             }
         },
+        "/api/v1/group/category/update/{category_id}": {
+            "post": {
+                "tags": [
+                    "Группы"
+                ],
+                "summary": "Обновить категорию группы",
+                "description": "Нужно передать поля name",
+                "operationId": "4f6ccdc17359f9b9891bb3ed4835fded",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "name"
+                                ],
+                                "properties": {
+                                    "name": {
+                                        "type": "string",
+                                        "example": "test"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "422": {
+                        "description": "Вернет ошибку валидации, если поля не валидны или какие-то не отправлены"
+                    }
+                },
+                "security": [
+                    {
+                        "bearer": []
+                    }
+                ]
+            }
+        },
         "/api/v1/group/{group_id}": {
             "get": {
                 "tags": [
@@ -916,13 +958,25 @@
                                             "type": "integer",
                                             "example": 11
                                         },
-                                        "name": {
+                                        "firstName": {
                                             "type": "string",
-                                            "example": "Oksana"
+                                            "example": "firstName"
+                                        },
+                                        "lastName": {
+                                            "type": "string",
+                                            "example": "lastName"
+                                        },
+                                        "middleName": {
+                                            "type": "string",
+                                            "example": "middleName"
                                         },
                                         "email": {
                                             "type": "string",
                                             "example": "test@test.ru"
+                                        },
+                                        "phone": {
+                                            "type": "string",
+                                            "example": "88005353535"
                                         }
                                     },
                                     "type": "object"
